--- a/pages/QSN/style.css
+++ b/pages/QSN/style.css
@@ -1,17 +1,15 @@
 html {
   margin: 0px;
 }
-body {
+*:not(#credits) {
   margin: 0;
   padding: 0;
+}
+body{
+  background-color:black;
+  color:white;
   min-height: 100dvh;
   font-family: Arial, sans-serif;
-  background-color: black;
-  color: white;
-  overflw-y: hidden;
-}
-#disclaimer p {
-  margin: 5px;
 }
 #divIcon {
   height: 40px;
@@ -28,42 +26,23 @@ body {
   height: 90%;
   padding: 2px 0 0 2px;
 }
-p {
-  padding: 10px 5px 0 5px;
-  margin: 20px 10px 5px 5px;
-  font-sie: 16px;
+h1, h2, #text1, #text2{
+  text-align:center;
 }
-h1 {
-  text-align: center;
+h1{
   margin: 30px 0 0 0;
   padding: 10px 8px 0px 8px;
   font-size: 24px;
 }
-h2 {
-  text-align: center;
-  padding: 0 8px 10px 8px;
-  font-size: 20px;
-}
-  main {
-  /*flex: 1;*/
-  padding: 0 5px 0 5px;
-}
-#text1, #text2 {
-  text-align: center;
-  max-width: 1000px;
-}
-#text1 {
+#text1, #text2{
   background-color: #222222;
   border-radius: 10px;
   padding: 0 0 5px 0;
-  margin: 0 auto
+  margin: 0 15px;
 }
-#text2 {
-  background-color: #222222;
-  border-radius: 10px;
-  margin: 0 10px 0 10px;
-  padding: 0 0 5px 0;
-  margin: 0 auto
+p {
+  padding: 10px 5px 0 5px;
+  margin: 20px 10px 5px 5px;
 }
 li {
   margin: 0 0 2px 0;
