--- a/pages/QSN/style.css
+++ b/pages/QSN/style.css
@@ -36,7 +36,8 @@ h1{
   background-color: #222222;
   border-radius: 10px;
   padding: 0 0 5px 0;
-  margin: 0 15px;
+  margin: 0 auto;
+  max-width: 1000px;
 }
 p {
   padding: 10px 5px 0 5px;
