Add padding to main element in style.css

--- a/pages/QSN/style.css
+++ b/pages/QSN/style.css
@@ -9,6 +9,9 @@ html{
   min-height: 100dvh;
   font-family: Arial, sans-serif;
 }
+main{
+  padding: 0 10px;
+}
 #divIcon {
   height: 40px;
   width: 40px;
