--- a/pages/QSN/style.css
+++ b/pages/QSN/style.css
@@ -26,6 +26,7 @@ main{
 #upbar #title{
   color: #c8c8c8;
   position: fixed;
+  margin: ;
   left: 50%;
   transform: translateX(-50%);
   min-width: 300px;
