--- a/pages/QSN/styleBlack.css
+++ b/pages/QSN/styleBlack.css
@@ -81,6 +81,7 @@ main{
 }
 #text1, #text2{
   background-color: #666666;
+  color: white;
   border-radius: 10px;
   padding: 0 0 5px 0;
   margin: 0 auto;
@@ -95,7 +96,7 @@ li {
 }
 footer {
   font-size: 10px;
-  color: #white;
+  color: white;
   border-radius: 15px 15px 0 0;
   background-color: #666666;
   padding: 0px 5px 5px 0;
