--- a/pages/principal/styleBlack.css
+++ b/pages/principal/styleBlack.css
@@ -78,6 +78,21 @@ body {
   height:90%;
   padding: 2px 0 0 2px;
 }
+
+aside{
+  position: fixed;
+  background-color: blue;
+  border-radius: 0 15px 15px 0;
+  z-index: 9997;
+  height: 100%;
+}
+#horloge h2{
+  margin: 40px 0 0 0;
+}
+#horloge p {
+  font-size: 30px;
+}
+
 #screenSize{
   position: fixed;
   display: none;
