--- a/pages/principal/style.css
+++ b/pages/principal/style.css
@@ -91,6 +91,13 @@ aside{
 #horloge p {
   font-size: 30px;
 }
+nav ul{
+  margin: 40px 0 0 0;
+}
+ul li{
+  margin-bottom: 10px;
+}
+
 
 #screenSize{
   position: fixed;
