--- a/pages/principal/style.css
+++ b/pages/principal/style.css
@@ -80,7 +80,7 @@ body {
 
 aside{
   position: fixed;
-  background-color: blue;
+  background-color: #333333;
   border-radius: 0 15px 15px 0;
   z-index: 9997;
   height: 100%;
@@ -92,11 +92,15 @@ aside{
   font-size: 30px;
 }
 nav ul{
-  margin: 40px 0 0 0;
+  margin: 40px 30px 0 0;
 }
 ul li{
   margin-bottom: 10px;
 }
+#version{
+  margin: 300px 0 0 0;
+}
+
 
 
 #screenSize{
