debug js et css 1

--- a/pages/principal/styleBlack.css
+++ b/pages/principal/styleBlack.css
@@ -85,6 +85,7 @@ aside{
   border-radius: 0 15px 15px 0;
   z-index: 9997;
   height: 100%;
+  display: none;
 }
 #horloge h2{
   margin: 40px 0 0 0;
