--- a/pages/QSN/styleBlack.css
+++ b/pages/QSN/styleBlack.css
@@ -12,6 +12,36 @@ html{
 main{
   padding: 0 10px;
 }
+aside{
+  position: fixed;
+  background-color: #555555;
+  border-radius: 0 15px 15px 0;
+  z-index: 9997;
+  height: 100%;
+  display: none;
+  color: white;
+}
+#horloge h2{
+  margin: 40px 0 0 0;
+}
+#horloge p {
+  font-size: 30px;
+}
+nav ul{
+  margin: 40px 30px 10px 0;
+}
+ul li{
+  margin-bottom: 10px;
+}
+nav ul li a{
+  color: white;
+}
+#version{
+  position: fixed;
+  bottom: 30px;
+  left: 70px
+}
+
 #screenSize{
   position: fixed;
   display: none;
