--- a/pages/QSN/style.css
+++ b/pages/QSN/style.css
@@ -1,4 +1,4 @@
-* {
+body {
   margin: 0;
   padding: 0;
 }
@@ -19,6 +19,7 @@ main{
 }
 aside{
   position: fixed;
+  top: 0;
   background-color: #333333;
   border-radius: 0 15px 15px 0;
   z-index: 9997;
