--- a/pages/QSN/styleBlack.css
+++ b/pages/QSN/styleBlack.css
@@ -1,4 +1,4 @@
-* {
+body {
   margin: 0;
   padding: 0;
 }
@@ -14,6 +14,7 @@ main{
 }
 aside{
   position: fixed;
+  top: 0;
   background-color: #555555;
   border-radius: 0 15px 15px 0;
   z-index: 9997;
