--- a/pages/QSN/styleBlack.css
+++ b/pages/QSN/styleBlack.css
@@ -69,6 +69,9 @@ nav ul li a{
   transform: translateX(-50%);
   min-width: 300px;
 }
+#title a{
+  color: #c8c8c8;
+}
 #menu {
   height: 30px;
   width: 30px;
