--- a/pages/principal/styleBlack.css
+++ b/pages/principal/styleBlack.css
@@ -178,17 +178,24 @@ main {
   margin: 2px 0 0 0;
 }
 
+
+.msg {
+  margin: 1px 0 15px 10px;
+  padding-bottom: 5px
+}
+
+#msgGrille {
+  margin: 1px 0 15px 10px;
+  padding-bottom: 5px;
+  color: white;
+}
+
 #cercleAutres {
   width: 8px;
   height: 8px;
   background-color: red;
   border-radius: 50%;
   margin: 2px 0 0 0;
-}
-
-.msg {
-  margin: 1px 0 15px 10px;
-  padding-bottom: 5px
 }
 
 #msgGrille {
@@ -225,6 +232,9 @@ footer {
   #txtGrille {
     margin-left: 15px;
   }
+  #txtStatut {
+    margin-left: 15px;
+  }
   header {
     max-width: 750px;
     min-height: 150px;
@@ -232,6 +242,9 @@ footer {
     margin: 0 auto;
   }
    #msgGrille {
+    margin-left: 25px
+  }
+  #msgStatut {
     margin-left: 25px
   }
 }
