--- a/pages/QSN/styleBlack.css
+++ b/pages/QSN/styleBlack.css
@@ -101,11 +101,11 @@ nav ul li a{
   height: 90%;
   padding: 2px 0 0 2px;
 }
-h1, h2, #text1, #text2{
+h1, h2, #text1, #text2, #text3{
   text-align:center;
 }
 h1{
-  margin: 30px 0 0 0;
+  margin: 30px 0 30px 0;
   padding: 10px 8px 0px 8px;
   font-size: 24px;
 }
@@ -115,7 +115,7 @@ h1{
 main{
   margin: 90px 0 0 0;
 }
-#text1, #text2{
+#text1, #text2, #text3{
   background-color: #666666;
   color: white;
   border-radius: 10px;
@@ -123,12 +123,19 @@ main{
   margin: 0 auto;
   max-width: 1000px;
 }
+
+.date{
+  margin: 20px 0 5px 0;
+}
 p {
   padding: 10px 5px 0 5px;
   margin: 20px 10px 5px 5px;
 }
 li {
   margin: 0 0 2px 0;
+}
+#credits{
+  margin: 0 0 110px 0;
 }
 footer {
   font-size: 10px;
