--- a/pages/QSN/style.css
+++ b/pages/QSN/style.css
@@ -32,7 +32,7 @@ aside{
 }
 #horloge p {
   font-size: 30px;
-  margin-left: 50px;
+  margin: 10px 0 0 55px;
 }
 nav ul{
   margin: 40px 35px 10px 0;
